==> hathach/tinyusb/src/portable/microchip/sam3u/dcd_sam3u.c <==
#include "tusb_option.h"
#include "sam.h"
#include "device/dcd.h"
#  define USE_SOF         0
#  define USBHS_RAM_ADDR        0xA0100000u
#define get_ep_fifo_ptr(ep, scale) (((TU_XSTRCAT(TU_STRCAT(uint, scale),_t) (*)[0x8000 / ((scale) / 8)])USBHS_RAM_ADDR)[(ep)])

void dcd_init(uint8_t rhport)
{
  (void) rhport;

  /* Atomic block */
  uint32_t irq_state = __get_PRIMASK();
  __disable_irq();

  /* Enable USBPLL */
  PMC->CKGR_UCKR = CKGR_UCKR_UPLLEN | CKGR_UCKR_UPLLCOUNT(0x3fU);
  /* Wait until UTMI PLL is locked */
  while(!(PMC->PMC_SR & PMC_SR_LOCKU));

  /* Enable USB clock */
  PMC->PMC_PCER0 = 1 << ID_UDPHS;

  /* Enable the USB controller (detached state) */
  UDPHS->UDPHS_CTRL = UDPHS_CTRL_DETACH | UDPHS_CTRL_EN_UDPHS;

  /* Enable the End Of Reset, Suspend & Wakeup interrupts */
  UDPHS->UDPHS_IEN = (UDPHS_IEN_ENDRESET | UDPHS_IEN_DET_SUSPD | UDPHS_IEN_WAKE_UP)
  #if USE_SOF
  /* Enable start of frame interrupt */
  UDPHS->UDPHS_IEN |= UDPHS_IEN_INT_SOF;
  #endif
  /* Clear the End Of Reset, Wakeup & SOF interrupts */
  UDPHS->UDPHS_CLRINT = (UDPHS_CLRINT_ENDRESET | UDPHS_CLRINT_WAKE_UP | UDPHS_CLRINT_INT_SOF);

  dcd_connect(rhport);

  /* End of atomic block */
  __set_PRIMASK(irq_state);
}

void dcd_int_enable(uint8_t rhport)
{
  (void) rhport;

  NVIC_EnableIRQ(UDPHS_IRQn);
}

void dcd_int_disable(uint8_t rhport)
{
  (void) rhport;

  NVIC_DisableIRQ(UDPHS_IRQn);
}

void dcd_remote_wakeup(uint8_t rhport)
{
  (void) rhport;

  UDPHS->UDPHS_CTRL |= UDPHS_CTRL_REWAKEUP;
}

void dcd_connect(uint8_t rhport)
{
  (void) rhport;

  /* Attach the device */
  UDPHS->UDPHS_CTRL &= ~UDPHS_CTRL_DETACH;
}

void dcd_disconnect(uint8_t rhport)
{
  (void) rhport;

  /* Disable all endpoints */
  for(uint8_t ept_ix = 0; ept_ix < UDPHSEPT_NUMBER; ept_ix++)
      UDPHS->UDPHS_EPT[ept_ix].UDPHS_EPTCTLDIS = UDPHS_EPTCTLDIS_EPT_DISABL;

  /* Detach the device */
  UDPHS->UDPHS_CTRL |= UDPHS_CTRL_DETACH;

  /* Disable the device address */
  UDPHS->UDPHS_CTRL &= ~(UDPHS_CTRL_DEV_ADDR_Msk | UDPHS_CTRL_FADDR_EN);
}

void dcd_edpt0_status_complete(uint8_t rhport, tusb_control_request_t const * request)
{
  (void) rhport;

  if(request->bmRequestType_bit.recipient == TUSB_REQ_RCPT_DEVICE &&
     request->bmRequestType_bit.type == TUSB_REQ_TYPE_STANDARD &&
     request->bRequest == TUSB_REQ_SET_ADDRESS )
  {
    uint8_t const dev_addr = (uint8_t)equest->wValue;

    UDPHS->UDPHS_CTRL |= UDPHS_CTRL_DEV_ADDR(dev_addr) | UDPHS_CTRL_FADDR_EN;
  }
}

bool dcd_edpt_open(uint8_t rhport, tusb_desc_endpoint_t const * ep_desc)
{
  (void) rhport;

  uint8_t const epnum = tu_edpt_number(ep_desc->bEndpointAddress);
  uint8_t const dir   = tu_edpt_dir(ep_desc->bEndpointAddress);
  uint16_t const epMaxPktSize = ep_desc->wMaxPacketSize.size;
  tusb_xfer_type_t const eptype = (tusb_xfer_type_t)ep_desc->bmAttributes.xfer;
  uint8_t fifoSize = 0;                       /* FIFO size */
  uint16_t defaultEndpointSize = 8;           /* Default size of Endpoint */

  /* Find upper 2 power number of epMaxPktSize */
  if(epMaxPktSize)
  {
    while(defaultEndpointSize < epMaxPktSize)
    {
      fifoSize++;
      defaultEndpointSize <<= 1;
    }
  }

  xfer_status[epnum].max_packet_size = epMaxPktSize;

  UDPHS->UDPHS_EPTRST = (1 << epnum);

  if(epnum == 0)
  {
    xfer_status[UDPHSEPT_NUMBER].max_packet_size = epMaxPktSize;

    /* Enable the control endpoint - Endpoint 0 */
    UDPHS->UDPHS_EPT[0].UDPHS_EPTCTLENB = UDPHS_EPTCTLENB_EPT_ENABL;

    /* Configure the Endpoint 0 configuration register */
    USBHS->UDPHS_EPT[0].UDPHS_EPTCFG = (UDPHS_EPTCFG_EPT_SIZE(fifoSize) |
                                            UDPHS_EPTCFG_EPT_TYPE(TUSB_XFER_CONTROL) |
                                            UDPHS_EPTCFG_BK_NUMBER_1 |
                                            UDPHS_EPTCFG_EPT_MAPD);

    /* Clear STALL request */
    UDPHS->UDPHS_EPT[0].UDPHS_EPTCLRSTA = UDPHS_EPTCLRSTA_FRCESTALL;
    /* Clear the PID data of the current bank */
    UDPHS->UDPHS_EPT[0].UDPHS_EPTCLRSTA = UDPHS_EPTCLRSTA_TOGGLESQ;

	/* Enable RX_SETUP interrupt */
	UDPHS->UDPHS_EPT[0].UDPHS_EPTCTLENB = UDPHS_EPTCTLENB_RX_SETUP;

    /* Enable endpoint 0 interrupts */
    UDPHS->UDPHS_IEN |= UDPHS_IEN_EPT_0;

    return true;
  }
  else
  {
    /* Enable the control endpoint - Endpoint 0 */
    UDPHS->UDPHS_EPT[epnum].UDPHS_EPTCTLENB = UDPHS_EPTCTLENB_EPT_ENABL;

    /* Configure the Endpoint 0 configuration register */
    USBHS->UDPHS_EPT[epnum].UDPHS_EPTCFG = (UDPHS_EPTCFG_EPT_SIZE(fifoSize) |
                                            UDPHS_EPTCFG_EPT_TYPE(eptype) |
                                            UDPHS_EPTCFG_BK_NUMBER_1 |
											((dir & 0x01) << 3));

    if(eptype == TUSB_XFER_ISOCHRONOUS)
	{
      USBHS->UDPHS_EPT[epnum].UDPHS_EPTCFG |= UDPHS_EPTCFG_NB_TRANS(1) | UDPHS_EPTCFG_BK_NUMBER_2;
    }

    USBHS->UDPHS_EPT[epnum].UDPHS_EPTCFG |= UDPHS_EPTCFG_EPT_MAPD;

    /* Clear STALL request */
    UDPHS->UDPHS_EPT[epnum].UDPHS_EPTCLRSTA = UDPHS_EPTCLRSTA_FRCESTALL;
    /* Clear the PID data of the current bank */
    UDPHS->UDPHS_EPT[epnum].UDPHS_EPTCLRSTA = UDPHS_EPTCLRSTA_TOGGLESQ;

	/* Enable Endpoint Interrupts */
	if(dir == TUSB_DIR_IN)
	{
	  UDPHS->UDPHS_EPT[epnum].UDPHS_EPTCTLENB = UDPHS_EPTCTLENB_TXRDY;
	}

    /* Enable endpoint interrupts */
    UDPHS->UDPHS_IEN |= (1 << (8 + epnum));

	return true;
  }
}

bool dcd_edpt_xfer(uint8_t rhport, uint8_t ep_addr, uint8_t * buffer, uint16_t total_bytes)
{
  (void) rhport;

  uint8_t const epnum = tu_edpt_number(ep_addr);
  uint8_t const dir   = tu_edpt_dir(ep_addr);

  xfer_ctl_t * xfer = &xfer_status[epnum];
  if(ep_addr == 0x80)
    xfer = &xfer_status[UDPHSEPT_NUMBER];

  xfer->buffer = buffer;
  xfer->total_len = total_bytes;
  xfer->queued_len = 0;

  if(dir == TUSB_DIR_OUT)
  {
    UDPHS->UDPHS_EPT[ep_ix].UDPHS_EPTCTLENB = UDPHS_EPTCTLENB_RXRDY_TXKL;
  }
  else
  {
    dcd_transmit_packet(xfer,epnum);
  }
  return true;
}

void dcd_edpt_stall(uint8_t rhport, uint8_t ep_addr)
{
  (void) rhport;

  uint8_t const epnum = tu_edpt_number(ep_addr);
  /* enable request STALL */
  UDPHS->UDPHS_EPT[epnum].UDPHS_EPTSETSTA = UDPHS_EPTSETSTA_FRCESTALL;
}

void dcd_edpt_clear_stall(uint8_t rhport, uint8_t ep_addr)
{
  (void) rhport;

  uint8_t const epnum = tu_edpt_number(ep_addr);
  /* clear STALL request */
  UDPHS->UDPHS_EPT[epnum].UDPHS_EPTCLRSTA = UDPHS_EPTCLRSTA_FRCESTALL;
  /* clear the PID data of the current bank */
  UDPHS->UDPHS_EPT[epnum].UDPHS_EPTCLRSTA = UDPHS_EPTCLRSTA_TOGGLESQ;
}
